[package]
name = "google-adc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
insta = "1.34.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["gzip", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "net", "fs"] }
urlencoding = "2.1.3"
