[package]
name = "google-adc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
home = "0.5.9"
jsonwebtoken = { version = "9.2.0" }
oauth2 = { git = "https://github.com/marcel-hamer/oauth2-rs" }
pkcs8 = "0.10.2"
reqwest = { version = "0.11.23", default-features = false, features = [
  "gzip",
  "json",
] }
rsa = "0.9.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "net", "fs"] }
urlencoding = "2.1.3"

[dev-dependencies]
insta = "1.34.0"

[features]
default = ["rustls-tls-native-roots"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
